# clipboard-sync

./: Cargo.toml  README.md
.github/workflows/: upload-release.yml
src/: connect.rs  errors.rs  install.rs  main.rs  server.rs  service.rs
