[package]
name = "clipboard-sync"
version = "0.1.0"
edition = "2021"
authors = ["Jonah"]

[dependencies]
arboard = "3.3.0"
clap = { version = "4.4.11", features = ["derive", "env"] }
futures-channel = "0.3.29"
futures-util = "0.3.29"
local-ip-address = "0.5.6"
native-tls = "0.2.11"
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "time",
    "process",
] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
